applied instanceof pattern matching and stream tolist